--- a/style.css
+++ b/style.css
@@ -303,3 +303,11 @@ header{
 .fort{
   border:5px double rgb(186, 130, 255) ;
 }
+
+button a{
+  color:white;
+  text-decoration: none;
+}
+.a {
+  color:rgb(7, 51, 95);
+}
